# milq

./: LICENSE  README.md  export-Lnevera-1694218903.csv  install-additional-cli-software.sh  install-additional-software.sh  install-anaconda-linux.md  install-caffe-ubuntu-debian.sh  install-caffe.sh  install-cli-apps.sh  install-cli-software.sh  install-numix.sh  install-opencl-debian.sh  install-opencv-ubuntu-debian.sh  install-opencv.sh  install-python-scientific-computing-ubuntu-debian.sh  install-scientific-python-distribution-anaconda.md  install-scientific-python.sh  install-useful-cli-apps.sh  just-after-installing-ubuntu-debian.sh
.github/workflows/: android.yml  laravel.yml
examples/: README.md
examples/cpp/opencv/viz/: CMakeLists.txt  demo.cpp
examples/php/form/: form.html  index.html  preprocess.js  process.php
examples/php/xml/src/css/: style.css
installations/opencv/: install-opencv-ubuntu-16-04.sh
learn/00/: 00.js
learn/01/: 01.js  01.php  01.py
learn/02/: 02.js  02.php  02.py
learn/03/: 03.js  03.php  03.py
learn/04/: 04.js  04.php  04.py
learn/05/: 05.php
learn/06/: 06.php
learn/code/01/: 01.php
learn/crud/sql/: connect_db.php  index.php
learn/crud/sql/src/sql/: database.sql
learn/crud/xml/: index.php
learn/libs/xml/: simplexml.php  xml_etree.py
learn/php/1_form/: process.php
learn/php/2_crud/: form_edit.php
learn/php/2_crud/sql/: connect_db.php  edit.php  index.php
learn/php/2_crud/src/sql/: database.sql
learn/php/2_crud/xml/: index.php
learn/php/3_login/: connect_db.php  index.php  log_in.php  log_out.php  sign_up.php  web_admin.php  web_user.php
learn/php/3_login/src/css/: style.css
learn/php/3_login/src/js/: app.js
learn/php/3_login/src/sql/: database.sql
learn/php/5_ns/: index.php
learn/php/5_ns/bar/: A.php  B.php
learn/php/5_ns/foo/: C.php
learn/php/crud/sql/: add.php  connect_db.php  delete.php  form.php  form_add.html  index.php  process.php
learn/php/crud/xml/: form.php  load_xml.php  process.php
learn/php/login/: connect_db.php  index.php  log_in.php  log_out.php  sign_up.php  web_admin.php  web_user.php
learn/php/login/src/sql/: database.sql
learn/prog/: README.md
learn/prog/00/: 00.c  00.cpp  00.php  00.ps1  00.py  00.sh  00a.c  J00.java  Java00.java  a.out
learn/prog/01/: 01.c  01.cpp  01.js  01.php  01.ps1  01.py  01.sh  J01.java  Java01.java  a.out  temp.sh
learn/prog/02/: 02.js  02.php  02.ps1  02.py  02.sh  J02.java  asa.php
learn/prog/03/: 03.js  03.ps1
learn/prog/04/: 04.js  04.php  04.ps1
learn/prog/05/: 05.js  05.ps1  05.py  05.sh
learn/prog/06/: 06.js  06.py
learn/prog/07/: 07.js  07.php  07.py  geometry.js  geometry.php  geometry.py
learn/prog/input_script/: input_script.php  input_script.ps1  input_script.py  input_script.sh
learn/prog/libs/xml/: simplexml.php
learn/prog/script_input/: script_input.php  script_input.ps1  script_input.py  script_input.sh
learn/prog/user_input/: user_input.php  user_input.ps1  user_input.py  user_input.sh
learn/web/form/: form.html  preprocess.js  process.php
learn/web/xml/: students.xml  students.xsl
learn/xml/: students.xml  students.xsd
libs/cvrotate2D/: CMakeLists.txt  LICENSE  README.md
libs/cvrotate2D/cmake/: config.cmake.in
libs/cvrotate2D/doc/Doxygen/: Doxyfile.in
libs/cvrotate2D/examples/: CMakeLists.txt  demo.cpp
libs/cvrotate2D/include/cvrotate2D/: cvrotate2D.hpp
libs/cvrotate2D/src/: CMakeLists.txt  cvrotate2D.cpp
other/: blank.html
scripts/bash/: README.md  install-additional-cli-software.sh  install-additional-educational-software.sh  install-additional-gui-educational-software.sh  install-additional-gui-software.sh  install-additional-software.sh  install-numix-xfce-debian.sh  install-numix-xfce.sh  install-opencv.sh
scripts/bash/config/: asa.sh  chromium.desktop  geany.desktop  xfce4-panel.xml
scripts/bash/config/panel/: datetime-10.rc
scripts/debian/: README.md  install-scientific-python-distribution-anaconda.md
snippets/: README.md
templates/cpp/: CMakeLists.txt  LICENSE  README.md
templates/cpp/doc/: install_project_on_windows.html
templates/cpp/examples/: demo.cpp
templates/cpp/src/: CMakeLists.txt  Class.cpp
templates/html/: README.md  blank.html  index.html
templates/python/: README.md
templates/python/doc/: Makefile  make.bat
templates/python/doc/src/: README.rst  conf.py  index.rst
templates/python/examples/: demo.py
templates/python/my_module/: __init__.py
templates/python/my_module/laws/: __init__.py  gravitation.py
templates/python/my_module/operations/: __init__.py  elementary.py  exponentiation.py
(+3 files in other folders)
